--- a/great-idea-website/css/index.css
+++ b/great-idea-website/css/index.css
@@ -93,6 +93,7 @@ header {
   border-bottom: 1px solid black;
   margin-left: 4.5%;
   margin-right: 4.5%;
+  padding-top: 4%;
   padding-bottom: 4%;
 }
 
@@ -159,4 +160,12 @@ a.button2 {
   margin-top: 3%;
   padding: 3%;
   border-top: 1px solid black;
+}
+
+#stickyNav {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 1;
+  background-color: #add8e6;
 }
