--- a/great-idea-website/css/index.css
+++ b/great-idea-website/css/index.css
@@ -116,7 +116,7 @@ footer {
   padding: 1%
 }
 
-a.button2 {
+button.button2 {
   font-size: 20px;
   color: black;
   border: 2px solid grey;
@@ -169,3 +169,41 @@ a.button2 {
   z-index: 1;
   background-color: #add8e6;
 }
+
+.button2 {
+  border-radius: 4px;
+  background-color: #0080ff;
+  border: none;
+  color: #FFFFFF;
+  text-align: center;
+  font-size: 28px;
+  padding: 20px;
+  width: 200px;
+  transition: all 0.5s;
+  cursor: pointer;
+  margin: 5px;
+}
+
+.button2 span {
+  cursor: pointer;
+  display: inline-block;
+  position: relative;
+  transition: 0.5s;
+}
+
+.button2 span:after {
+  content: '\00bb';
+  position: absolute;
+  opacity: 0;
+  top: 0;
+  right: -20px;
+  transition: 0.5s;
+}
+
+.button2:hover span {
+  padding-right: 25px;
+}
+
+.button2:hover span:after {
+  opacity: 1;
+  right: 0;
