--- a/great-idea-website/css/index.css
+++ b/great-idea-website/css/index.css
@@ -151,6 +151,7 @@ button.button2 {
   width: 85%;
   margin-top: 2%;
   margin-bottom: 2%;
+  border-radius: 5px;
 }
 
 .contact {
@@ -207,3 +208,16 @@ button.button2 {
 .button2:hover span:after {
   opacity: 1;
   right: 0;
+}
+
+a.button {
+  background-color: #FFFF99;
+  border-radius: 10px;
+  padding: 10px;
+  transition: 0.3s;
+}
+
+a.button:hover {
+  background-color: #ffd300;
+  color: white;
+}
